# genEPJ

./: .gitignore  CITATION  FUTURE_FEATURES.txt  LICENSE  MANIFEST.in  README.md  flake.nix  interactive_genEPJ.py  makefile  pyproject.toml  requirements.txt  rubybkup_.gem_ruby_2.6.0
.github/workflows/: windows-smoke-test.yml
docs/: troubleshooting.md
examples/opti/: default.nix  opti_inputs.json  optimizer_optiEPJ.py  sim
examples/sim-tinyhome/: Nomad_genEPJ.py  genEPJ  makefile  nomad_3RV96.idf  opti_inputs.json  startsim.sh
genEPJ/: FUTURE_FEATURE.txt  FUTURE_FEATURES.txt  __init__.py  genEPJ.py  generate_EPJ.py  generate_cashflow.py  generate_weather.py  ml_genEPJ.py  opti_EPJ.py  resources.py
genEPJ-2/: __init__.py
genEPJ-2/pylib/: epJSON_templater.py  templates_v9_0.py
genEPJ-2/templateGenerator_epJSON/: templates_9.0.1.json
genEPJ/Modelkit/: LOGS_Modelkit.txt  modelkit_wrapper.py
genEPJ/OpenStudio/: ERRORS.txt  LOGS_OpenStudio.txt  build_instructions.txt  convert_file.rb  install_guide.txt  openstudio_cmd.sh  openstudio_wrapper.py
genEPJ/doc/: documentation.md  documentation_orig.md
genEPJ/pylib/: epJSON_templater.py  genEPJ_lib.py  templater.py  templates_v8_1.py  templates_v8_5.py  templates_v9_0.py
genEPJ/standalone/: add_comments.py  apply_function.py  check_model.py  run_genEPJ_functions.sh
genEPJ/templates/: COMMONWIN.csv  COMMONWINwin7.csv  (+6 more)
jupyter/: genEPJ.ipynb  jupyter_notebook_config.py
notebooks/: 01_windows_tinyhome_demo.ipynb
rhino_genEPJ_woodfrog/: woodFrog.py
tests/: test_energyplus_available.py  test_installation.py
(+250 files in other folders)
